[package]
name = "node_installer"
authors = ["Tymon Woźniak"]
license = "MIT"
license-file = "LICENSE"
keywords = ["installer", "windows", "node", "local", "noadmin"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
downloader = "0.2.7"
directories = "5.0.1"
zip-extract = "0.1.3"
winreg = "0.52.0"
